--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   file_picker: ^8.3.4
   uuid: ^4.5.2
   web_socket_channel: ^3.0.3
+  cryptography: ^2.7.0
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
